Name:		HFastJet-generate
Version:	0.0
Synopsis:	
Description: 	
License: 	BSD3
License-file:	LICENSE
Author:		Ian-Woo Kim
Maintainer: 	Ian-Woo Kim <ianwookim@gmail.com>
Build-Type: 	Simple
Cabal-Version:  >= 1.8
data-files:     


Executable hfastjet-generate
  Main-is: hfastjet-generate.hs
  hs-source-dirs: exe
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, HFastJet-generate, 
                   HStringTemplate
--                   HStringTemplateHelpersIW

Library
  hs-source-dirs: lib
  ghc-options: 	-Wall -O2 -threaded -funbox-strict-fields -fno-warn-unused-do-bind
  ghc-prof-options: -caf-all -auto-all
  Build-Depends: 
                   base>4, mtl>2, directory, filepath,
                   cmdargs, fficxx, parsec>3,
                   HStringTemplate, containers
--                   HStringTemplateHelpersIW

  Exposed-Modules: 
                   Application.HFastJetGen.Type
                   Application.HFastJetGen.Job
                   Application.HFastJetGen.Command
                   Application.HFastJetGen.Data.FastJet
                   Application.HFastJetGen.Data.FastJetAnnotate
  Other-Modules: 

 
		 